更新MQ查看方式